<resources>
    <string name="app_name">Daily Task</string>

    <string name="title_task_list">Task List</string>
    <string name="title_task_report">Task Report</string>
    <string name="title_setting">Setting</string>
    <string name="title_logout">Setting</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_section1">Task List</string>
    <string name="title_section2">Task Report</string>
    <string name="title_section3">Settings</string>
    <string name="title_section4">Logout</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_retype_password">Re-type Password</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_email">E-Mail</string>

    <string name="label_login_title">Welcome</string>

    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="notice_to_registerNow1">Don\'t have an account?</string>
    <string name="notice_to_registerNow2">\tRegister Now.</string>

    // register
    <string name="register_info_label">Please fill with your info</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_trash">TrashActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_add_task">Add Task</string>
    <string name="title_activity_edit_task">EditTask</string>
</resources>
