<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_register_info"
        android:text="@string/register_info_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="26sp"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/edittext_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_register_info"
        android:layout_marginTop="40dp"
        android:hint="@string/hint_fullname"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_fullname"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_email"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_email"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_password"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/edittext_retype_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_password"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_retype_password"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edittext_retype_password"
        android:layout_marginTop="30dp"
        android:text="@string/button_register"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"
        android:onClick="registerClick"/>

</RelativeLayout>