<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activityLogin_horizontal_margin"
    android:paddingRight="@dimen/activityLogin_horizontal_margin"
    android:paddingTop="@dimen/activityLogin_vertical_margin"
    android:paddingBottom="@dimen/activityLogin_vertical_margin"
    tools:context=".Login">

    <TextView
        android:id="@+id/text_login_title"
        android:text="@string/label_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/textSize_title"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="45dp"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_horizontal_etLogin"
        android:layout_marginRight="@dimen/margin_horizontal_etLogin"
        android:layout_marginTop="@dimen/distance_from_title"
        android:layout_below="@id/text_login_title"
        android:hint="@string/hint_email"/>
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_horizontal_etLogin"
        android:layout_marginRight="@dimen/margin_horizontal_etLogin"
        android:layout_marginTop="@dimen/distance_inter_editText"
        android:layout_below="@id/et_email"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_below="@id/et_password"
        android:text="@string/button_login"
        android:textStyle="bold"
        android:background="@android:color/holo_blue_dark"
        android:onClick="loginClick"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/footer_login_padding_horiz"
        android:paddingRight="@dimen/footer_login_padding_horiz"
        android:paddingTop="@dimen/footer_login_padding_verti"
        android:paddingBottom="@dimen/footer_login_padding_verti"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/footer_login"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_to_registerNow1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_to_registerNow2"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            android:onClick="registerClick"
            android:clickable="true"/>
    </LinearLayout>
</RelativeLayout>
